# bluepill-spi

./: CMakeLists.txt  init.sh  openocd.cfg
scripts/: requirements.txt  speedtest.py  spi.py
src/: main.c  main.h  stm32_assert.h  stm32f1xx_it.c  stm32f1xx_it.h  system_stm32f1xx.c  utils.c  utils.h
